Move CheapFactory from cheap-json to cheap-core and write a unit test for it. Also fix the non-deterministic test in cheap-json.